--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,19 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# mac exclusions
+.DS_Store
+
+# modflow exclusions
+*.lst
+*.hds
+*.cbc
+*.grb
+*.csv
+*.bin
+
+# pest exclusions
+
+# exercise exclusions
+synthetic-valley-advanced/
