--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,4 +3,10 @@ repos:
   rev: 0.8.2
   hooks:
     - id: nbstripout
-  
+
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  rev: v0.14.10
+  hooks:
+    - id: ruff-check
+      args: [--fix, --exit-non-zero-on-fix]
+    - id: ruff-format
