add starting calibration notebook

--- a/.gitignore
+++ b/.gitignore
@@ -227,3 +227,4 @@ installation/temp/
 synthetic-valley-base/
 synthetic-valley-advanced*/
 synthetic-valley-original/
+synthetic-valley-calibration*/
