--- a/environment.yml
+++ b/environment.yml
@@ -53,4 +53,4 @@ dependencies:
   - jupyterlab_code_formatter
   - pip:
        - pypestutils
-       - git+https://github.com/pypest/pyemu.git@develop
+       - git+https://github.com/jtwhite79/pyemu.git@feat_lesswarn
