--- a/environment.yml
+++ b/environment.yml
@@ -54,3 +54,4 @@ dependencies:
   - pip:
        - pypestutils
        - git+https://github.com/jtwhite79/pyemu.git@feat_lesswarn
+       - git+https://github.com/INTERA-Inc/mf6adj.git@develop
