remove flopy header and update readme.md

--- a/.gitignore
+++ b/.gitignore
@@ -228,3 +228,4 @@ synthetic-valley-base/
 synthetic-valley-advanced*/
 synthetic-valley-original/
 synthetic-valley-calibration*/
+synthetic-valley-working*/
