--- a/environment.yml
+++ b/environment.yml
@@ -54,5 +54,5 @@ dependencies:
   - jupyterlab_code_formatter
   - pip:
        - pypestutils
-       - git+https://github.com/jtwhite79/pyemu.git@feat_lesswarn
+       - git+https://github.com/pypest/pyemu.git@develop
        - git+https://github.com/INTERA-Inc/mf6adj.git@develop
