add advanced and prt notebooks

--- a/.gitignore
+++ b/.gitignore
@@ -230,3 +230,6 @@ synthetic-valley-advanced*/
 synthetic-valley-original/
 synthetic-valley-calibration*/
 synthetic-valley-working*/
+synthetic-valley-vg-prt/
+synthetic-valley-vg-gwt/
+synthetic-valley-vg-api/
