add mf6-adj notebook

--- a/pixi.toml
+++ b/pixi.toml
@@ -27,11 +27,13 @@ jupyter = { cmd = "jupyter lab" }
 
 [target.unix.tasks]
 update-pc-files = { cmd = "python update_pc_files.py", cwd = "installation" }
+get-libmf6 = { cmd = "get-modflow --repo modflow6-nightly-build :python" }
 clone-modflow = "rm -rf modflow6/ && git clone https://github.com/MODFLOW-USGS/modflow6.git"
 setup-modflow = { cmd = "PKG_CONFIG_PATH=$PIXI_PROJECT_ROOT/.pixi/envs/default/lib/pkgconfig && rm -rf builddir && meson setup builddir -Ddebug=false -Dextended=true --prefix=$PIXI_PROJECT_ROOT/.pixi/envs/default/", cwd = "modflow6" }
 install-modflow = { cmd = "meson install -C builddir", cwd = "modflow6" }
 test-modflow = { cmd = "meson test --verbose --no-rebuild -C builddir", cwd = "modflow6" }
 obtain-modflow = { depends-on = [
+  "get-libmf6",
   "update-pc-files",
   "clone-modflow",
   "update-dependencies",
