add api example

--- a/.gitignore
+++ b/.gitignore
@@ -235,7 +235,6 @@ synthetic-valley-working*/
 synthetic-valley-vg-prt/
 synthetic-valley-vg-gwt/
 synthetic-valley-vg-parallel/
-synthetic-valley-vg-api/
-synthetic-valley-adj/
+synthetic-valley-api-*/
 synthetic-valley-adj/
 variable-density/
